# organizar-docs

./: .gitignore  env.example.json  organizar_docs.bat  processed  pyinstaller.spec  pyproject.toml
src/: __main__.py  functions.py  identifies_where_file_saved.py  images.py  list_folders_companies.py  organize_files.py
